# rust-api-sample

./: .env  .gitignore  Cargo.toml  compose.yaml
migrations/: 20231104075644_create_tasks_table.sql  20231105042500_add_status_to_tasks.sql
src/: main.rs
src/models/: task.rs
