[package]
name = "rust-api-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls"] }
